@@ -5,9 +5,9 @@
 #W                          Jose Morais <josejoao@fc.up.pt>
 ##
 ##
-#Y  Copyright 2005 by Manuel Delgado, 
+#Y  Copyright 2005 by Manuel Delgado,
 #Y  Pedro Garcia-Sanchez and Jose Joao Morais
-#Y  We adopt the copyright regulations of GAP as detailed in the 
+#Y  We adopt the copyright regulations of GAP as detailed in the
 #Y  copyright notice in the GAP manual.
 ##
 #############################################################################
@@ -73,7 +73,7 @@ InstallMethod(SmallElementsOfNumericalSemigroup,
         [IsNumericalSemigroup and HasGenerators],1,
          function( sgp )
      local g, S, n, bool, gen, R, sumNS, ss;
-          
+
     #####################################################
     # Computes the sum of subsets of numerical semigroups
     sumNS := function(S,T)
@@ -102,7 +102,7 @@ InstallMethod(SmallElementsOfNumericalSemigroup,
             gen := Difference(gen,sumNS(ss,gen));
         fi;
     fi;
-    
+
     S := [0];
     n := 1;
     bool := true;
@@ -129,7 +129,7 @@ InstallMethod(SmallElementsOfNumericalSemigroup,
         g := R[Length(R)];
     fi;
     SetFrobeniusNumberOfNumericalSemigroup(sgp,g);
-    
+
     SetSmallElements(sgp, Intersection([0..g+1],Union(S, [g+1])));
     return SmallElements(sgp);
 end);
@@ -140,7 +140,7 @@ end);
 ##
 #A  SmallElementsOfNumericalSemigroup(S)
 ##
-##  Returns the list of the elements of S(a,b) 
+##  Returns the list of the elements of S(a,b)
 ##  in [0..b].
 ##
 #############################################################################
@@ -167,7 +167,7 @@ InstallMethod(SmallElementsOfNumericalSemigroup,
         g := R[Length(R)];
     fi;
     SetFrobeniusNumberOfNumericalSemigroup(sgp,g);
-    
+
     SetSmallElements(sgp, Intersection([0..g+1],Union(S, [g+1])));
     return SmallElements(sgp);
 end);
@@ -178,8 +178,8 @@ end);
 ##
 #A  SmallElementsOfNumericalSemigroup(S)
 ##
-##  Returns the list of the elements of S(a,b,c) 
-##  in [0..b]. 
+##  Returns the list of the elements of S(a,b,c)
+##  in [0..b].
 ##
 #############################################################################
 InstallMethod(SmallElementsOfNumericalSemigroup,
@@ -207,7 +207,7 @@ InstallMethod(SmallElementsOfNumericalSemigroup,
         g := R[Length(R)];
     fi;
     SetFrobeniusNumberOfNumericalSemigroup(sgp,g);
-    
+
     SetSmallElements(sgp, Intersection([0..g+1],Union(S, [g+1])));
     return SmallElements(sgp);
 end);
@@ -217,9 +217,9 @@ end);
 ##
 #A  SmallElementsOfNumericalSemigroup(S)
 ##
-##  Computes the numerical semigroup consiting of the non negative integers 
+##  Computes the numerical semigroup consiting of the non negative integers
 ##  of the submonoid of RR generated by the interval ]r,s[ where r and s
-##  are rational numbers. 
+##  are rational numbers.
 ##
 #############################################################################
 InstallMethod(SmallElementsOfNumericalSemigroup,
@@ -227,7 +227,7 @@ InstallMethod(SmallElementsOfNumericalSemigroup,
         [IsNumericalSemigroup and HasOpenIntervalNS],10,
          function( sgp )
     local   r,  s,  k,  max,  NS,  i,  R,  g;
-    
+
     r := OpenIntervalNS(sgp)[1];
     s := OpenIntervalNS(sgp)[2];
 
@@ -240,7 +240,7 @@ InstallMethod(SmallElementsOfNumericalSemigroup,
     for i in [1..k] do
         NS := Union(NS, Filtered([1..max+1], j -> (i*r < j) and (j < i *s)));
     od;
-    
+
     if Length(NS) > 1 then
         SetGapsOfNumericalSemigroup(sgp,AsList(Difference([1..NS[Length(NS)]],NS)));
     fi;
@@ -251,11 +251,11 @@ InstallMethod(SmallElementsOfNumericalSemigroup,
         g := R[Length(R)];
     fi;
     SetFrobeniusNumberOfNumericalSemigroup(sgp,g);
-    
+
     SetSmallElements(sgp, Intersection([0..g+1],Union(NS, [g+1])));
     return SmallElements(sgp);
 end);
-    
+
 
 
 #############################################################################
@@ -266,7 +266,7 @@ end);
 ##  produces the corresponding numerical semigroup
 ##
 ##  The periodic subadditive function is given through a list and
-##  the last element of the list must be 0. 
+##  the last element of the list must be 0.
 ##
 #############################################################################
 InstallMethod(SmallElementsOfNumericalSemigroup,
@@ -274,9 +274,9 @@ InstallMethod(SmallElementsOfNumericalSemigroup,
         [IsNumericalSemigroup and HasSubAdditiveFunctionNS],10,
          function( sgp )
     local   L,  m,  F,  S,  x,  fx,  R,  g;
-    
+
     L := SubAdditiveFunctionNS(sgp);
-    
+
     m := Length(L);
     F := Maximum(L) + m +1;
     S := [0];
@@ -301,7 +301,7 @@ InstallMethod(SmallElementsOfNumericalSemigroup,
         g := R[Length(R)];
     fi;
     SetFrobeniusNumberOfNumericalSemigroup(sgp,g);
-    
+
     SetSmallElements(sgp, Intersection([0..g+1],Union(S, [g+1])));
     return SmallElements(sgp);
 end);
@@ -344,6 +344,38 @@ end);
 
 #############################################################################
 ##
+#F  DesertsOfNumericalSemigroup(S)
+##
+##  Returns the lists of runs of gaps of the numerical semigroup S
+##
+#############################################################################
+InstallGlobalFunction(DesertsOfNumericalSemigroup, function(s)
+  local ds, gs, run, g;
+
+  if not(IsNumericalSemigroup(s)) then
+    Error("The argument must be a numerical semigroup");
+  fi;
+
+  ds:=[];
+  gs:=GapsOfNumericalSemigroup(s);
+  if gs=[] then
+    return [];
+  fi;
+
+  run:=[];
+  for g in gs do
+    Add(run,g);
+    if not(g+1 in gs) then
+      Add(ds,run);
+      run:=[];
+    fi;
+  od;
+
+  return ds;
+end);
+
+#############################################################################
+##
 #A  GenusOfNumericalSemigroup(S)
 ##
 ##  Returns the number of gaps of the numerical semigroup S.
@@ -375,7 +407,7 @@ InstallMethod(WilfNumberOfNumericalSemigroup,
     edim:=EmbeddingDimensionOfNumericalSemigroup(s);
     c:=ConductorOfNumericalSemigroup(s);
     se:=Length(SmallElements(s))-1;
-    return edim*se-c;    
+    return edim*se-c;
 end);
 
 #############################################################################
@@ -386,7 +418,7 @@ end);
 ##  Returns W_0(S) (see [E])
 ##
 #############################################################################
-InstallMethod(TruncatedWilfNumberOfNumericalSemigroup,        
+InstallMethod(TruncatedWilfNumberOfNumericalSemigroup,
         "Returns the Eliahou number of the numerical semigroup",
         [IsNumericalSemigroup],10,
 function(s)
@@ -401,7 +433,7 @@ function(s)
     r:=q*m-c;
     dq:=Length(Difference([c..c+m-1],msg));
     return smsg*se-q*dq+r;
-    
+
 end);
 
 
@@ -425,16 +457,16 @@ InstallGlobalFunction(ProfileOfNumericalSemigroup,function(s)
     q:=CeilingOfRational(c/m);
     r:=q*m-c;
     return List([1..q-1],i->Length(Intersection(msg,[i*m-r..(i+1)*m-r-1])));
-    
+
 end);
 
 #############################################################################
 ##
 #F  EliahouSlicesOfNumericalSemigroup(S)
 ##
-##  Returns a list of lists of integers, each list is the set of elements in 
+##  Returns a list of lists of integers, each list is the set of elements in
 ##  S belonging to [jm-r, (j+1)m-r[ where m is the mulitiplicity of S,
-##  and j in [1..q-1]; with q,r such that c=qm-r, c the conductor of S 
+##  and j in [1..q-1]; with q,r such that c=qm-r, c the conductor of S
 ##  (see [E])
 ##
 #############################################################################
@@ -449,45 +481,45 @@ InstallGlobalFunction(EliahouSlicesOfNumericalSemigroup,function(s)
     q:=CeilingOfRational(c/m);
     r:=q*m-c;
     return List([1..q-1],i->Intersection(s,[i*m-r..(i+1)*m-r-1]));
-    
+
 end);
 
 #########################################################
-## 
+##
 #F LatticePathAssociatedToNumericalSemigroup(s,p,q)
 ##
 ## s is a numerical semigroup, and p,q are elements in s
-## Then s is an oversemigroup of <p,q> and all its gaps 
+## Then s is an oversemigroup of <p,q> and all its gaps
 ## are gaps of <p,q>. If c is the conductor of <p,q>,
-## every gap g in <p,q> is expressed uniquely as 
+## every gap g in <p,q> is expressed uniquely as
 ## g=c-1-(ap+bq) for some nonnegative integers a and b,
 ## whence g has associated coordinates (a,b)
-## The output is the path in N^2 such that every point 
+## The output is the path in N^2 such that every point
 ## in N^2 corresponding to a gap of <p,q> above the path
 ## correspond to gaps of s (see [K-W])
 #########################################################
 InstallGlobalFunction(LatticePathAssociatedToNumericalSemigroup, function(s,p,q)
-    
+
     local gaps, coords, c, le;
-    
+
     le:=function(p1,p2)
         return ((p1[1]<=p2[1]) and (p1[2]<=p2[2]));
     end;
-    
-    
+
+
     if not(IsNumericalSemigroup(s)) then
         Error("The first argument must be a numerical semigroup");
     fi;
-    
+
     if not((p in s) and (q in s)) then
         Error("The second and third argument must be elements in the semigroup");
     fi;
-    
+
     gaps:=GapsOfNumericalSemigroup(s);
-    
+
     c:=ConductorOfNumericalSemigroup(NumericalSemigroup(p,q));
     coords:=List(gaps, g-> FactorizationsIntegerWRTList(c-1-g,[p,q])[1]);
     Info(InfoNumSgps,2,"Coordinates of gaps wrt p,q\n",coords);
     return Filtered(coords, x->Filtered(coords, y ->le(x,y))=[x]);
-    
+
 end);
